docs(verification): P5-A AC7.6 benchmark history, menu labels, F1 re-check, AC5.8 A3/S-M1/DH/autosave, findings status
Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01BzjDikL2wqunaSiMjefimU